Stop screen overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
+    overflow: hidden;
 }
 
 canvas {
